--- a/tobi.Rmd
+++ b/tobi.Rmd
@@ -7,7 +7,7 @@ links:
   - label: GitHub
     url: "https://github.com/JedCooper20"
   - label: Email
-    url: "jed.cooper07@gmail.com"
+    url: "jed.cooper07@JEDS-LAPTOP"
 output:
   postcards::jolla
 ---
